--- a/index.html
+++ b/index.html
@@ -725,19 +725,23 @@
           <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
             <ul class="social-icon">
               <li>
-                <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
+                <a class="facebook" href="https://www.facebook.com/stevenfrancis.reyes"><i
+                    class="icon-social-facebook"></i></a>
               </li>
               <li>
-                <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
+                <a class="github" href="https://github.com/steven0529"><i class="icon-social-github"></i></a>
               </li>
               <li>
-                <a class="instagram" href="#"><i class="icon-social-instagram"></i></a>
+                <a class="stackexchange" href="https://stackoverflow.com/users/2873772/steven0529"><i
+                    class="lni-stackoverflow"></i></a>
               </li>
               <li>
-                <a class="instagram" href="#"><i class="icon-social-linkedin"></i></a>
+                <a class="linkedin" href="https://www.linkedin.com/in/steven-francis-reyes-58a92790/"><i
+                    class="icon-social-linkedin"></i></a>
               </li>
               <li>
-                <a class="instagram" href="#"><i class="icon-social-google"></i></a>
+                <a class="google" href="https://plus.google.com/u/0/114494024657980843354"><i
+                    class="icon-social-google"></i></a>
               </li>
             </ul>
             <p>Copyright © 2018 UIdeck All Right Reserved</p>
