--- a/index.html
+++ b/index.html
@@ -170,18 +170,26 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
-            <h3>Hi Guys!</h3>
-            <p>Est diam venenatis arcu lacus ad. Duis quis eros. Cursus et rutrum eleifend sollicitudin lacinia justo
-              id turpis. Nec convallis integer. Odio eget duis. Nulla aenean et. Blandit varius sollicitudin.
-              Pellentesque leo primis neque urna magnis. Elit ut sollicitudin. Et est a nam dolores eget itaque
-              sagittis et parturient duis est eleifend sociis rutrum odio viverra integer.</p>
+            <h3>Hi!</h3>
+            <p>
+              My name is Steven Francis Reyes, I am Lead Software Engineer with 5 years of experience architecting and
+              building high quality mobile applications both for consumer and enterprise. I have well-rounded knowledge
+              on developing end-to-end software systems with specialisation on mobile development.
+              <br /><br />
+              I believe teamwork is always the key, working in Agile Scrum teams to continuously deliver a shippable
+              customer-focused product in the shortest time possible is my forte.
+              <br /><br />
+              As a technology enthusiast, I enjoy learning new tech-related stuffs and as a seasoned traveler, I like to
+              explore new places as well.
+              <br /><br />
+              And if ever you want to build the "next big thing”, contact me, I’m more than willing to help you.
+            </p>
             <div class="about-profile">
               <ul class="admin-profile">
                 <li><span class="pro-title"> Name </span> <span class="pro-detail">Steven Francis Reyes</span></li>
                 <li><span class="pro-title"> Age </span> <span class="pro-detail">26 Years</span></li>
                 <li><span class="pro-title"> Experience </span> <span class="pro-detail">5 Years</span></li>
-                <li><span class="pro-title"> Country </span> <span class="pro-detail">Philippines</span></li>
-                <li><span class="pro-title"> Location </span> <span class="pro-detail">Pasig city</span></li>
+                <li><span class="pro-title"> Location </span> <span class="pro-detail">Manila, Philippines</span></li>
                 <li><span class="pro-title"> e-mail </span> <span class="pro-detail">stevenfrancisreyes@gmail.com</span>
                 </li>
                 <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (63) 906 274 6416</span></li>
@@ -212,7 +220,7 @@
             </div>
             <div class="services-content">
               <h3><a href="#">Mobile Applications</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+              <p>Android, iOS, cross-platform/hybrid, you name it</p>
             </div>
           </div>
         </div>
@@ -224,7 +232,7 @@
             </div>
             <div class="services-content">
               <h3><a href="#">Agile Development</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+              <p>Deliver fast and customer-focused products</p>
             </div>
           </div>
         </div>
@@ -236,7 +244,7 @@
             </div>
             <div class="services-content">
               <h3><a href="#">Consultancy</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+              <p>Expert advice from a software engineer</p>
             </div>
           </div>
         </div>
@@ -250,7 +258,7 @@
     <div class="container">
       <div class="row">
 
-        <!-- Trainings and Conventions -->
+        <!-- Experience -->
         <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="experience wow fadeInRight" data-wow-delay="0.6s">
             <ul class="timeline">
@@ -299,7 +307,7 @@
           <div class="experience wow fadeInRight" data-wow-delay="0.6s">
             <ul class="timeline">
               <li>
-                <i class="icon-info"></i>
+                <i class="lni-blackboard"></i>
                 <h2 class="timelin-title">Trainings and Conventions attended</h2>
               </li>
               <li>
@@ -333,6 +341,8 @@
             </ul>
           </div>
         </div>
+
+        <!-- Certifications -->
         <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="education wow fadeInRight" data-wow-delay="0.3s">
             <ul class="timeline">
