Added Parian in portfolio

--- a/index.html
+++ b/index.html
@@ -170,9 +170,8 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
-            <h3>Hi!</h3>
             <p>
-              My name is Steven Francis Reyes, I am Lead Software Engineer with 5 years of experience architecting and
+              I am Steven Francis Reyes, I am Lead Software Engineer with 5 years of experience architecting and
               building high quality mobile applications both for consumer and enterprise. I have well-rounded knowledge
               on developing end-to-end software systems with specialisation on mobile development.
               <br /><br />
@@ -480,28 +479,25 @@
             <a class="filter active btn btn-common" data-filter="all">
               All
             </a>
-            <a class="filter btn btn-common" data-filter=".design">
-              Design
+            <a class="filter btn btn-common" data-filter=".professional">
+              Professional
             </a>
-            <a class="filter btn btn-common" data-filter=".development">
-              Development
-            </a>
-            <a class="filter btn btn-common" data-filter=".print">
-              Print
+            <a class="filter btn btn-common" data-filter=".personal">
+              Personal
             </a>
           </div>
           <!-- Portfolio Controller/Buttons Ends-->
         </div>
 
         <!-- Portfolio Recent Projects -->
-        <!-- <div id="portfolio" class="row wow fadeInDown" data-wow-delay="0.4s">
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development print">
+        <div id="portfolio" class="row wow fadeInDown" data-wow-delay="0.4s">
+          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mix personal">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="assets/img/gallery/img-1.jpg" alt="" />
+                <img src="assets/img/gallery/parian_showcase.png" alt="" />
                 <div class="overlay">
                   <div class="icons">
-                    <a class="lightbox preview" href="assets/img/gallery/img-1.jpg">
+                    <a class="lightbox preview" href="assets/img/gallery/parian_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
                     <a class="link" href="#">
@@ -510,26 +506,10 @@
                   </div>
                 </div>
               </div>
+              <h2 style="text-align:center;">Parian Kiosk</h2>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix design print">
-            <div class="portfolio-item">
-              <div class="shot-item">
-                <img src="assets/img/gallery/img-2.jpg" alt="" />
-                <div class="overlay">
-                  <div class="icons">
-                    <a class="lightbox preview" href="assets/img/gallery/img-2.jpg">
-                      <i class="icon-eye"></i>
-                    </a>
-                    <a class="link" href="#">
-                      <i class="icon-link"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix professional">
             <div class="portfolio-item">
               <div class="shot-item">
                 <img src="assets/img/gallery/img-3.jpg" alt="" />
@@ -599,8 +579,8 @@
           </div>
         </div>
       </div>
-    </div> -->
-        <!-- Container Ends -->
+    </div>
+    <!-- Container Ends -->
   </section>
   <!-- Portfolio Section Ends -->
 
