Added project portfolio

--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
 
         <!-- Portfolio Recent Projects -->
         <div id="portfolio" class="row wow fadeInDown" data-wow-delay="0.4s">
+          <!-- Parian -->
           <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mix personal">
             <div class="portfolio-item">
               <div class="shot-item">
@@ -505,17 +506,19 @@
                     </a>
                   </div>
                 </div>
+                <h2 style="text-align:center;">Parian Kiosk</h2>
+                <br />
               </div>
-              <h2 style="text-align:center;">Parian Kiosk</h2>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix professional">
+          <!-- Petzam -->
+          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mix personal">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="assets/img/gallery/img-3.jpg" alt="" />
+                <img src="assets/img/gallery/petzam_showcase.png" alt="" />
                 <div class="overlay">
                   <div class="icons">
-                    <a class="lightbox preview" href="assets/img/gallery/img-3.jpg">
+                    <a class="lightbox preview" href="assets/img/gallery/petzam_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
                     <a class="link" href="#">
@@ -523,16 +526,19 @@
                     </a>
                   </div>
                 </div>
+                <h2 style="text-align:center;">Petzam</h2>
+                <br />
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
+          <!-- Globe at Home -->
+          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mix professional">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="assets/img/gallery/img-4.jpg" alt="" />
+                <img src="assets/img/gallery/gah_showcase.png" alt="" />
                 <div class="overlay">
                   <div class="icons">
-                    <a class="lightbox preview" href="assets/img/gallery/img-4.jpg">
+                    <a class="lightbox preview" href="assets/img/gallery/gah_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
                     <a class="link" href="#">
@@ -540,16 +546,19 @@
                     </a>
                   </div>
                 </div>
+                <h2 style="text-align:center;">Globe at Home</h2>
+                <br />
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+          <!-- LocApp -->
+          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mix professional">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="assets/img/gallery/img-5.jpg" alt="" />
+                <img src="assets/img/gallery/locapp_showcase.png" alt="" />
                 <div class="overlay">
                   <div class="icons">
-                    <a class="lightbox preview" href="assets/img/gallery/img-5.jpg">
+                    <a class="lightbox preview" href="assets/img/gallery/locapp_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
                     <a class="link" href="#">
@@ -557,16 +566,19 @@
                     </a>
                   </div>
                 </div>
+                <h2 style="text-align:center;">LocApp/Store Locator</h2>
+                <br />
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+          <!-- Habit -->
+          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mix professional">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="assets/img/gallery/img-6.jpg" alt="" />
+                <img src="assets/img/gallery/habit_showcase.png" alt="" />
                 <div class="overlay">
                   <div class="icons">
-                    <a class="lightbox preview" href="assets/img/gallery/img-6.jpg">
+                    <a class="lightbox preview" href="assets/img/gallery/habit_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
                     <a class="link" href="#">
@@ -574,6 +586,28 @@
                     </a>
                   </div>
                 </div>
+                <h2 style="text-align:center;">HaBit/Stratpoint Token</h2>
+                <br />
+              </div>
+            </div>
+          </div>
+          <!-- Cutiefy -->
+          <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mix personal">
+            <div class="portfolio-item">
+              <div class="shot-item">
+                <img src="assets/img/gallery/cutiefy_showcase.png" alt="" />
+                <div class="overlay">
+                  <div class="icons">
+                    <a class="lightbox preview" href="assets/img/gallery/cutiefy_showcase.png">
+                      <i class="icon-eye"></i>
+                    </a>
+                    <a class="link" href="#">
+                      <i class="icon-link"></i>
+                    </a>
+                  </div>
+                </div>
+                <h2 style="text-align:center;">Cutiefy</h2>
+                <br />
               </div>
             </div>
           </div>
