Removed placeholder text in experience

--- a/index.html
+++ b/index.html
@@ -269,32 +269,28 @@
                 <div class="content-text">
                   <h3 class="line-title">Lead Software Engineer - Stratpoint Global Outsourcing</h3>
                   <span>May 2018 - Present</span>
-                  <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts
-                    pronounce by unwilling listening. Thing do taste on we manor.</p>
+                  <p class="line-text"></p>
                 </div>
               </li>
               <li>
                 <div class="content-text">
                   <h3 class="line-title">Senior Software Engineer - Stratpoint Global Outsourcing</h3>
                   <span>May 2017 - May 2018</span>
-                  <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts
-                    pronounce by unwilling listening. Thing do taste on we manor.</p>
+                  <p class="line-text"></p>
                 </div>
               </li>
               <li>
                 <div class="content-text">
                   <h3 class="line-title">Software Engineer - Stratpoint Global Outsourcing</h3>
                   <span>Aug 2015 - May 2017</span>
-                  <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts
-                    pronounce by unwilling listening. Thing do taste on we manor.</p>
+                  <p class="line-text"></p>
                 </div>
               </li>
               <li>
                 <div class="content-text">
                   <h3 class="line-title">Android Developer - Bittel Asia</h3>
                   <span>April 2014 - Aug 2015</span>
-                  <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts
-                    pronounce by unwilling listening. Thing do taste on we manor.</p>
+                  <p class="line-text"></p>
                 </div>
               </li>
             </ul>
