Updated about me

--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
           <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
             <p>
               I am Steven Francis Reyes, I am Lead Software Engineer with 5 years of experience architecting and
-              building high quality mobile applications both for consumer and enterprise. I have well-rounded knowledge
-              on developing end-to-end software systems with specialisation on mobile development.
+              building high-quality mobile applications both for consumer and enterprise. I have a well-rounded
+              knowledge of developing end-to-end software systems with specialization on mobile development.
               <br /><br />
               I believe teamwork is always the key, working in Agile Scrum teams to continuously deliver a shippable
               customer-focused product in the shortest time possible is my forte.
               <br /><br />
-              As a technology enthusiast, I enjoy learning new tech-related stuffs and as a seasoned traveler, I like to
+              As a technology enthusiast, I enjoy learning new tech-related stuff and as a seasoned traveler, I like to
               explore new places as well.
               <br /><br />
               And if ever you want to build the "next big thing”, contact me, I’m more than willing to help you.
