Added project links

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                     <a class="lightbox preview" href="assets/img/gallery/gah_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
-                    <a class="link" href="#">
+                    <a class="link" href="https://play.google.com/store/apps/details?id=ph.com.globe.globeathome">
                       <i class="icon-link"></i>
                     </a>
                   </div>
