--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     <a class="lightbox preview" href="assets/img/gallery/parian_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
-                    <a class="link" href="#">
+                    <a class="link" href="https://www.forkby.com/parian_products/2">
                       <i class="icon-link"></i>
                     </a>
                   </div>
@@ -517,7 +517,7 @@
                     <a class="lightbox preview" href="assets/img/gallery/petzam_showcase.png">
                       <i class="icon-eye"></i>
                     </a>
-                    <a class="link" href="#">
+                    <a class="link" href="https://play.google.com/store/apps/details?id=com.petzam.petzam">
                       <i class="icon-link"></i>
                     </a>
                   </div>
