Added meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description"
+    content="A software engineer with 5 years of experience and expertise on multiple tech stacks" />
+  <meta name="keywords"
+    content="Developer,Android Developer,iOS Developer,Programmer,Software Engineer,Programmer,Agile,SAFe 4,Google Certified">
 
-  <title>MeetMe - Resume Website Template</title>
+  <title>Steven Francis Reyes - Personal Portfolio</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
