--- a/index.html
+++ b/index.html
@@ -606,8 +606,8 @@
                 <img src="assets/img/gallery/dwango_showcase.jpeg" alt="Streaming Platform" />
               </div>
               <div class="content">
-                <div class="meta">Cross-Platform Live Streaming Application</div>
-                <h3>Habit Tracker</h3>
+                <div class="meta">Cross-Platform • Streaming</div>
+                <h3>Cross-Platform Live Streaming Application</h3>
                 <div class="excerpt">Developed a Dart-based application using the RTP streaming protocol to connect content creators with their audiences in real time. Designed for interactive live streaming with low latency, supporting both creators and viewers across platforms, and enabling features such as live engagement and audience interaction tools.
                 </div>
                 <button class="see-more" type="button">See more</button>
