--- a/index.html
+++ b/index.html
@@ -277,6 +277,15 @@
       @media (max-width: 640px) { .cols-4, .cols-3, .cols-2 { grid-template-columns: 1fr; } .project { grid-template-columns: 1fr; } .kv { grid-template-columns: 1fr; } }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KLMZRW9R37"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-KLMZRW9R37');
+  </script>
   <body>
     <header class="header glass" id="top">
       <div class="container nav">
