--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Steven Francis Reyes — Portfolio (Glass)</title>
+    <title>Steven Francis Reyes — Portfolio</title>
     <meta name="description" content="Versatile full‑stack engineer delivering e‑commerce, mobile, backend, cloud (AWS/GCP), and blockchain solutions end‑to‑end." />
     <meta name="keywords" content="Software Engineer, Full-Stack, Android, Kotlin, Spring Boot, NestJs, ExpressJS, Flutter, AWS, GCP, Docker, Firebase, GitHub Actions, Shopify, Commercetools, Solidity, TypeScript" />
     <meta name="author" content="Steven Francis Reyes" />
