--- a/index.html
+++ b/index.html
@@ -701,6 +701,16 @@
           <div class="cert-grid">
             <div class="cert-card">
               <span class="cert-icon" aria-hidden="true">
+                <img src="https://media.licdn.com/dms/image/v2/D5622AQEHhFaXK_tnkg/feedshare-shrink_2048_1536/feedshare-shrink_2048_1536/0/1723057959631?e=2147483647&v=beta&t=WCK4H5_b4qtusUSOnOLbPGFlH7ICW7-rKN7wxq7PJ0I" alt="Sanity logo" />
+              </span>
+              <div class="cert-body">
+                <div class="cert-title">commercetools Certified Composable Commerce Developer</div>
+                <div class="cert-meta">Commercetools</div>
+                <span class="pill">c5a30377aca4870656b132dc6c0f4db020df966c</span>
+              </div>
+            </div>
+            <div class="cert-card">
+              <span class="cert-icon" aria-hidden="true">
                 <img src="https://cdn.simpleicons.org/sanity/0b0d12" alt="Sanity logo" />
               </span>
               <div class="cert-body">
