--- a/index.html
+++ b/index.html
@@ -699,25 +699,28 @@
         <div class="container">
           <h2>Certifications</h2>
           <div class="cert-grid">
-            <div class="cert-card">
-              <span class="cert-icon" aria-hidden="true">
-                <img src="https://media.licdn.com/dms/image/v2/D5622AQEHhFaXK_tnkg/feedshare-shrink_2048_1536/feedshare-shrink_2048_1536/0/1723057959631?e=2147483647&v=beta&t=WCK4H5_b4qtusUSOnOLbPGFlH7ICW7-rKN7wxq7PJ0I" alt="Sanity logo" />
-              </span>
-              <div class="cert-body">
-                <div class="cert-title">commercetools Certified Composable Commerce Developer</div>
-                <div class="cert-meta">Commercetools</div>
-                <span class="pill">c5a30377aca4870656b132dc6c0f4db020df966c</span>
+            <a href="https://learn.commercetools.com/badges/badge.php?hash=c5a30377aca4870656b132dc6c0f4db020df966c" >
+              <div class="cert-card">
+                <span class="cert-icon" aria-hidden="true">
+                  <img src="assets/img/commercetools.png" alt="Commercetools Certification logo" />
+                </span>
+                <div class="cert-body">
+                  <div class="cert-title">commercetools Certified</div>
+                  <div class="cert-meta">Commercetools</div>
+                </div>
               </div>
-            </div>
-            <div class="cert-card">
-              <span class="cert-icon" aria-hidden="true">
-                <img src="https://cdn.simpleicons.org/sanity/0b0d12" alt="Sanity logo" />
-              </span>
-              <div class="cert-body">
-                <div class="cert-title">Sanity Certified Developer</div>
-                <div class="cert-meta">Sanity.io</div>
+            </a>
+            <a href="https://www.sanity.io/learn/certification/sanity-developer-certification/share/gtwGhq2Ad?utm_campaign=course_completed&utm_medium=social&utm_source=linkedin&utm_campaign=course_completed&utm_medium=social&utm_source=x&utm_campaign=course_completed&utm_medium=social&utm_source=bluesky&utm_campaign=course_completed&utm_medium=social&utm_source=copy_link">
+              <div class="cert-card">
+                <span class="cert-icon" aria-hidden="true">
+                  <img src="https://cdn.simpleicons.org/sanity/0b0d12" alt="Sanity logo" />
+                </span>
+                <div class="cert-body">
+                  <div class="cert-title">Sanity Certified Developer</div>
+                  <div class="cert-meta">Sanity.io</div>
+                </div>
               </div>
-            </div>
+            </a>
             <div class="cert-card">
               <span class="cert-icon" aria-hidden="true">
                 <img src="https://simpleicons.org/icons/w3schools.svg" alt="W3Schools logo" />              </span>
